# ckanext-sentry

./: .gitignore  README.rst  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
ckanext/sentry/: __init__.py  plugins.py
ckanext/sentry/assets/: sentry.js  webassets.yml
ckanext/sentry/templates/: base.html
